# Socrates-GDG-Hackathon-2026

./: .env.example  .gitignore  LICENSE  README.MD  app.py  cache_paths.py  pyproject.toml  requirements.txt
agent/: evaluator.py  graph.py  llm.py  orchestrator.py  peer_matcher.py  schemas.py  semantic_analyzer.py  session_analyzer.py  speech.py  state.py  tutor.py
data/: metadata_enriched.json  metadata_peer.json  metadata_peer_struggling.json
docs/: ARCHITECTURE.md  REQUIREMENTS.md  TECHNICAL_DESIGN.md
docs/pitch/: index.html
tests/: test_evaluator.py  test_session_analyzer.py  test_speech.py
